--- a/main.css
+++ b/main.css
@@ -4,22 +4,6 @@ body {
 	padding: 0;
 }
 
-button {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	background: none;
-	font-size: 100%;
-	vertical-align: baseline;
-	font-family: inherit;
-	font-weight: inherit;
-	color: inherit;
-	-webkit-appearance: none;
-	appearance: none;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
@@ -28,17 +12,7 @@ body {
 	min-width: 230px;
 	max-width: 550px;
 	margin: 0 auto;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
-}
-
-:focus {
-	outline: 0;
-}
-
-.hidden {
-	display: none;
 }
 
 .todoapp {
@@ -49,19 +23,7 @@ body {
 	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
-.todoapp input::-webkit-input-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: #e6e6e6;
-}
-
-.todoapp input::-moz-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: #e6e6e6;
-}
-
-.todoapp input::input-placeholder {
+.todoapp input {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
@@ -95,8 +57,7 @@ body {
 	border: 1px solid #999;
 	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 	box-sizing: border-box;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	outline: none;
 }
 
 .new-todo {
@@ -217,7 +178,7 @@ body {
 	text-decoration: line-through;
 }
 
-.todo-list li .destroy {
+.todo-list li .remove {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -232,15 +193,15 @@ body {
 	transition: color 0.2s ease-out;
 }
 
-.todo-list li .destroy:hover {
+.todo-list li .remove:hover {
 	color: #af5b5e;
 }
 
-.todo-list li .destroy:after {
+.todo-list li .remove:after {
 	content: '×';
 }
 
-.todo-list li:hover .destroy {
+.todo-list li:hover .remove {
 	display: block;
 }
 
