--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@ body {
 	padding: 0;
 }
 
+button {
+	border: 0;
+	background: none;
+}
+
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
@@ -15,15 +20,29 @@ body {
 	font-weight: 300;
 }
 
+:focus {
+	outline: 0;
+}
+
+.hidden {
+	display: none;
+}
+
 .todoapp {
-	background: #fff;
-	margin: 130px 0 40px 0;
 	position: relative;
+	margin: 130px 0 40px 0;
+	background: #fff;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
 	            0 25px 50px 0 rgba(0, 0, 0, 0.1);
 }
 
-.todoapp input {
+.todoapp input::-webkit-input-placeholder {
+	font-style: italic;
+	font-weight: 300;
+	color: #e6e6e6;
+}
+
+.todoapp input::input-placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
@@ -42,22 +61,14 @@ body {
 	text-rendering: optimizeLegibility;
 }
 
-.new-todo,
-.edit {
+.new-todo {
 	position: relative;
 	margin: 0;
-	width: 100%;
 	font-size: 24px;
-	font-family: inherit;
-	font-weight: inherit;
 	line-height: 1.4em;
-	border: 0;
-	color: inherit;
 	padding: 6px;
 	border: 1px solid #999;
-	box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 	box-sizing: border-box;
-	outline: none;
 }
 
 .new-todo {
@@ -76,7 +87,7 @@ body {
 .toggle-all {
 	width: 1px;
 	height: 1px;
-	border: none; 
+	border: none; /* Mobile Safari */
 	opacity: 0;
 	position: absolute;
 	right: 100%;
@@ -146,7 +157,7 @@ body {
 	top: 0;
 	bottom: 0;
 	margin: auto 0;
-	border: none;
+	border: none; /* Mobile Safari */
 	-webkit-appearance: none;
 	appearance: none;
 }
@@ -178,7 +189,7 @@ body {
 	text-decoration: line-through;
 }
 
-.todo-list li .remove {
+.todo-list li .destroy {
 	display: none;
 	position: absolute;
 	top: 0;
@@ -193,24 +204,16 @@ body {
 	transition: color 0.2s ease-out;
 }
 
-.todo-list li .remove:hover {
+.todo-list li .destroy:hover {
 	color: #af5b5e;
 }
 
-.todo-list li .remove:after {
+.todo-list li .destroy:after {
 	content: '×';
 }
 
-.todo-list li:hover .remove {
+.todo-list li:hover .destroy {
 	display: block;
-}
-
-.todo-list li .edit {
-	display: none;
-}
-
-.todo-list li.editing:last-child {
-	margin-bottom: -1px;
 }
 
 .footer {
@@ -221,28 +224,9 @@ body {
 	border-top: 1px solid #e6e6e6;
 }
 
-.footer:before {
-	content: '';
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 50px;
-	overflow: hidden;
-	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
-	            0 8px 0 -3px #f6f6f6,
-	            0 9px 1px -3px rgba(0, 0, 0, 0.2),
-	            0 16px 0 -6px #f6f6f6,
-	            0 17px 2px -6px rgba(0, 0, 0, 0.2);
-}
-
 .todo-count {
 	float: left;
 	text-align: left;
-}
-
-.todo-count strong {
-	font-weight: 300;
 }
 
 .filters {
