--- a/main.css
+++ b/main.css
@@ -4,11 +4,6 @@ body {
 	padding: 0;
 }
 
-button {
-	border: 0;
-	background: none;
-}
-
 body {
 	font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	line-height: 1.4em;
@@ -17,6 +12,13 @@ body {
   width: 550px;
 	margin: 0 auto;
 	font-weight: 300;
+}
+
+button {
+	color: inherit;
+	border: 0;
+	background: none;
+	font-size: inherit;
 }
 
 :focus {
@@ -35,12 +37,6 @@ body {
 }
 
 .todoapp input::-webkit-input-placeholder {
-	font-style: italic;
-	font-weight: 300;
-	color: #e6e6e6;
-}
-
-.todoapp input::input-placeholder {
 	font-style: italic;
 	font-weight: 300;
 	color: #e6e6e6;
@@ -72,14 +68,12 @@ body {
 
 .main {
 	position: relative;
-	z-index: 2;
 	border-top: 1px solid #e6e6e6;
 }
 
 .toggle-all {
 	width: 1px;
 	height: 1px;
-	border: none; /* Mobile Safari */
 	opacity: 0;
 	position: absolute;
 	right: 100%;
