--- a/main.css
+++ b/main.css
@@ -14,6 +14,10 @@ body {
 	font-weight: 300;
 }
 
+.invisible {
+	display: none;
+}
+
 button {
 	color: inherit;
 	border: 0;
@@ -52,7 +56,7 @@ button {
 	color: rgba(175, 47, 47, 0.15);
 }
 
-.edit {
+.edit-field {
 	position: relative;
 	margin: 0;
 	width: 100%;
@@ -68,6 +72,9 @@ button {
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	width: 506px;
+	padding: 12px 16px;
+	margin: 0 0 0 43px;
 }
 
 .new-todo {
